FILE(GLOBnixia_sources*.c)
FILE(GLOBnixia_headers*.h)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY${CMAKE_BINARY_DIR}/bin)

add_executable(nixia${nixia_sources})
target_link_libraries(nixia
logcommonhttpcsperfcommon
libeventrtmpthread
libeventlibzloglibevent_pthreadslibevhtplibhiredislibncurses)

#Copyconfigurationfiles
install(FILES${LOG_CONFIG}DESTINATION${CONFIG_DIR}
PERMISSIONSOWNER_EXECUTEOWNER_WRITEOWNER_READ
GROUP_EXECUTEGROUP_WRITEGROUP_READ
WORLD_EXECUTEWORLD_WRITEWORLD_READ)

install(TARGETSnixiaRUNTIMEDESTINATION/usr/local/bin)
